dev/soludev/oauth2-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: soludev
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      automountServiceAccountToken: false
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          imagePullPolicy: IfNotPresent
          args:
            - "--config=/etc/oauth2_proxy.cfg"
            - "--cookie-secret=$(OAUTH2_PROXY_COOKIE_SECRET)"
            - "--client-id=$(OAUTH2_PROXY_CLIENT_ID)"
            - "--client-secret=$(OAUTH2_PROXY_CLIENT_SECRET)"
          ports:
            - name: http
              containerPort: 4180
          volumeMounts:
            - name: config
              mountPath: /etc/oauth2_proxy.cfg
              subPath: oauth2_proxy.cfg
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: config
          configMap:
            name: oauth2-proxy-config
